# pyGRN

./: .gitignore  InvertedDoublePendulum-v5.grn  README.md  config.yaml  examples.ipynb  mujuco_double_pendulum.grn  pyproject.toml  regression.ipynb  regression.py  regression_old.py
pygrn/: __init__.py  config.py  layer.py  recurrent.py
pygrn/evolution/: evolution.py  individual.py  mutation.py  population.py
pygrn/grns/: __init__.py  base.py  classic.py  disset_best.py
pygrn/problems/: __init__.py  base.py  regression.py  reinforcement.py
